# coi-optimizers

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  build-docs.sh  build_docs.sh  pyproject.toml  setup.cfg  update-copyright.sh
.reuse/templates/: geoff.jinja2
docs/: changelog.rst  conf.py  guide.rst  index.rst
docs/_ext/: fix_napoleon_attributes_type.py  fix_xrefs.py
docs/_templates/: layout.html  layout.html.license
docs/_theme/: layout.html
docs/api/: coi_integration.rst  index.rst  interface.rst  registration.rst  third_party_wrappers.rst
docs/examples/: implement_an_optimizer.rst  index.rst  run_generic_optimizer.rst
examples/: implement_an_optimizer.py  run_generic_optimizer.py
src/cernml/optimizers/: __init__.py  _interface.py  _registration.py  _solvefunc.py  bobyqa.py  extremum_seeking.py  scipy.py  skopt.py  xopt.py
tests/: test_interface.py  test_registration.py  test_wrappers.py
